--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate --no-engine && next build",
+    "build": "npx prisma generate --no-engine && tsx prisma/seed.ts && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -50,6 +51,8 @@
     "@tiptap/starter-kit": "^2.22.0",
     "@uploadthing/react": "^7.3.1",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
+    "better-auth": "^1.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -59,11 +62,13 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "isomorphic-dompurify": "^2.25.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.17.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -84,11 +89,13 @@
     "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.17.18",
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
     "prisma": "^6.12.0",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
