--- a/package.json
+++ b/package.json
@@ -78,9 +78,9 @@
     "nuqs": "^2.4.3",
     "prisma": "^6.16.1",
     "rate-limiter-flexible": "^7.2.0",
-    "react": "19.1.0",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "react-slugify": "^4.0.1",
